--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
     "main": "server.js",
     "author": "lkranjcevic",
     "license": "FER",
+    "scripts": {
+        "serve": "node server.js",
+        "build": "npm run-script build",
+        "start": "node server.js"
+      },
     "dependencies": {
         "core-js": "^3.6.5",
         "express": "^4.17.2",
-        "serve-static": "^1.14.2"
+        "serve-static": "^1.14.2",
+        "web-push": "^3.4.5"
     }
 }
